--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,20 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/background"
+    android:orientation="vertical"
     tools:context=".activities.MainActivity">
 
     <TextView
         android:id="@+id/main_city_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/txt_main_city"
-        android:textSize="30sp"
-        android:textColor="@color/white"
-        android:textAlignment="center"
-        android:gravity="center_horizontal"
         android:layout_marginTop="65dp"
+        android:gravity="center_horizontal"
+        android:text="@string/txt_main_city"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@id/recyclerview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,10 +26,11 @@
     <ProgressBar
         android:id="@+id/progress_horizontal"
         style="@android:style/Widget.ProgressBar.Horizontal"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         app:layout_constraintBottom_toTopOf="@id/recyclerview"
-        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/main_city_title"
         tools:visibility="visible" />
@@ -38,7 +39,6 @@
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="518dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
