--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/card_view"
     android:layout_margin="12dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="3dp"
     app:cardElevation="3dp"
     app:cardUseCompatPadding="true">
@@ -19,32 +18,15 @@
             android:id="@+id/row_action_image"
             android:layout_width="75dp"
             android:layout_height="75dp"
-
             android:src="@mipmap/ic_launcher"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-            <!--android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="1dp"
-            android:layout_marginEnd="272dp"
-            android:layout_marginRight="272dp"
-            android:layout_marginBottom="16dp"-->
-
-            <!-- -->
-        <!--ToDo glide as src-->
-
-        <!--android:layout_marginStart="227dp"
-            android:layout_marginLeft="227dp"
-            android:layout_marginBottom="7dp"-->
-
-
         <TextView
             android:id="@+id/row_title_day_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             android:text="Title"
             android:textColor="#000"
             android:textSize="22sp"
@@ -65,18 +47,8 @@
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.37"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/row_title_day_tv"
-            app:layout_constraintVertical_bias="0.428" />
-
-        <!--            android:layout_marginTop="32dp"
-        tools:layout_editor_absoluteX="32dp"
-                    android:layout_marginTop="16dp"
-                               android:layout_marginEnd="273dp"
-            android:layout_marginRight="273dp"
-
--->
+            app:layout_constraintStart_toEndOf="@id/row_action_image"
+            app:layout_constraintTop_toBottomOf="@id/row_title_day_tv" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
